Icons names edited

--- a/app/src/main/res/drawable/bus_icon_2.xml
+++ b/app/src/main/res/drawable/bus_icon_2.xml
@@ -7,7 +7,6 @@
             android:toDegrees="180"
             android:pivotX="50%"
             android:pivotY="50%"
-            android:drawable="@drawable/ic_water_drop_svgrepo_com_1">
-        </rotate>
+            android:drawable="@drawable/ic_water_drop"></rotate>
     </item>
 </layer-list>
