--- a/app/src/main/res/drawable/bus_icon_3_offline2.xml
+++ b/app/src/main/res/drawable/bus_icon_3_offline2.xml
@@ -7,8 +7,7 @@
             android:toDegrees="180"
             android:pivotX="50%"
             android:pivotY="50%"
-            android:drawable="@drawable/ic_water_drop_svgrepo_com_1_offline">
-        </rotate>
+            android:drawable="@drawable/ic_water_drop_offline"></rotate>
     </item>
     <item android:right="5dp">
         <rotate
@@ -16,7 +15,6 @@
             android:toDegrees="180"
             android:pivotX="50%"
             android:pivotY="50%"
-            android:drawable="@drawable/ic_water_drop_svgrepo_com_1">
-        </rotate>
+            android:drawable="@drawable/ic_water_drop"></rotate>
     </item>
 </layer-list>
