--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
                 android:padding="8dp"
                 android:background="@color/transparent"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_menu_black_24dp"
+                android:src="@drawable/ic_menu"
                 android:tint="?android:textColor"
                 android:translationZ="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -74,7 +74,7 @@
                 android:layout_height="45dp"
                 android:scaleType="center"
                 android:background="@color/transparent"
-                android:src="@drawable/ic_search_black_24dp"
+                android:src="@drawable/ic_search"
                 android:tint="?android:textColor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
