--- a/app/src/main/res/layout/activity_station_bottom.xml
+++ b/app/src/main/res/layout/activity_station_bottom.xml
@@ -18,7 +18,7 @@
         android:elevation="6dp"
         android:focusable="true"
         android:scaleType="center"
-        android:src="@drawable/ic_my_location_black_24dp"
+        android:src="@drawable/ic_my_location"
         android:tint="?android:textColor"
         tools:ignore="UseAppTint" />
 
@@ -80,7 +80,7 @@
                     android:background="?selectableItemBackgroundBorderless"
                     android:backgroundTint="?backgroundViewColor"
                     android:scaleType="center"
-                    android:src="@drawable/ic_arrow_back_black_24dp"
+                    android:src="@drawable/ic_arrow_back"
                     android:tint="?android:textColor"
                     app:layout_constraintBottom_toTopOf="@+id/station_tab_layout"
                     app:layout_constraintStart_toStartOf="parent"
@@ -140,7 +140,7 @@
                     android:layout_marginEnd="16dp"
                     android:background="?selectableItemBackgroundBorderless"
                     android:elevation="2dp"
-                    android:src="@drawable/ic_swap_vert_black_24dp"
+                    android:src="@drawable/ic_swap"
                     android:tint="?android:textColor"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/station_title" />
