--- a/app/src/main/res/layout/station_node_maps.xml
+++ b/app/src/main/res/layout/station_node_maps.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/stroke"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/station_circle_node"
+    android:background="@drawable/station_circle"
     android:orientation="vertical"
     android:padding="3dp">
 
