--- a/app/src/main/res/layout/template_custom_toast.xml
+++ b/app/src/main/res/layout/template_custom_toast.xml
@@ -19,7 +19,7 @@
         android:minWidth="24dp"
         android:minHeight="24dp"
         android:tint="?android:textColor"
-        app:srcCompat="@drawable/ic_swap_vert_black_24dp"
+        app:srcCompat="@drawable/ic_swap"
         tools:ignore="UseAppTint" />
 
     <TextView
