--- a/app/src/main/res/layout/template_station_node.xml
+++ b/app/src/main/res/layout/template_station_node.xml
@@ -62,7 +62,7 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:foregroundGravity="center"
-        android:src="@drawable/station_circle_node"
+        android:src="@drawable/station_circle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/station_name"
         app:layout_constraintStart_toStartOf="parent"
