--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -26,18 +26,18 @@
             android:id="@+id/tv_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="15dp"
             android:layout_marginBottom="5dp"
-            android:layout_toStartOf="@+id/p_bar"
             android:layout_toEndOf="@+id/iv_back"
-            android:paddingStart="15dp"
             android:maxLines="2"
+            android:paddingStart="15dp"
             android:paddingTop="5dp"
             android:paddingEnd="15dp"
             android:paddingBottom="5dp"
-            android:text="@string/detours"
             android:textSize="18sp"
-            android:tint="?android:textColor" />
+            android:tint="?android:textColor"
+            tools:text="https://lpp.si/obvoz" />
 
         <View
             android:id="@+id/top_line"
@@ -47,24 +47,15 @@
             android:background="@android:color/black"
             android:backgroundTint="@color/light_gray" />
 
-        <ProgressBar
-            android:id="@+id/p_bar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:visibility="invisible"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:indeterminateTint="?android:textColor"
-            android:layout_marginEnd="20dp" />
 
     </RelativeLayout>
 
     <WebView
         android:id="@+id/webview"
-        android:layout_below="@+id/detour_activity_top"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        android:layout_below="@+id/detour_activity_top" />
 
     <LinearLayout
         android:id="@+id/ll_error_container"
@@ -104,11 +95,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:text="@string/try_again"
             android:textColor="@color/colorAccent"
-            android:textStyle="bold"
-            android:text="@string/try_again" />
+            android:textStyle="bold" />
 
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_centerInParent="true"
+        android:indeterminateTint="?android:textColor" />
 
 </RelativeLayout>
