--- a/app/src/main/res/layout/fragment_stations_sub.xml
+++ b/app/src/main/res/layout/fragment_stations_sub.xml
@@ -11,7 +11,8 @@
         android:layout_height="match_parent"
         android:background="?backgroundViewColor"
         android:nestedScrollingEnabled="true"
-        tools:context=".ui.fragments.lpp.subfragments.StationsSubFragment" />
+        tools:context=".ui.fragments.lpp.subfragments.StationsSubFragment"
+        tools:listitem="@layout/template_station_nearby" />
 
     <LinearLayout
         android:id="@+id/stations_sub_list_favourite_error"
@@ -96,5 +97,49 @@
         android:layout_height="wrap_content"
         android:indeterminateTint="?android:textColor"
         android:layout_centerInParent="true" />
+
+    <LinearLayout
+        android:id="@+id/ll_error_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_error"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/ic_wifi"
+                android:tint="?android:textColor"
+                tools:ignore="UseAppTint" />
+
+            <TextView
+                android:id="@+id/tv_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="?android:textColor"
+                tools:text="No internet connection" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_try_again"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="@string/try_again"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
 </RelativeLayout>
