RouteActivity network/error handling improved, wifi icon renamed

--- a/app/src/main/res/layout/template_loading_msg.xml
+++ b/app/src/main/res/layout/template_loading_msg.xml
@@ -78,7 +78,7 @@
                 android:layout_height="24dp"
                 android:layout_gravity="center"
                 android:tint="?android:textColor"
-                app:srcCompat="@drawable/ic_wifi"
+                app:srcCompat="@drawable/ic_no_wifi"
                 tools:ignore="UseAppTint" />
 
             <TextView
