--- a/app/src/main/res/layout/activity_departure.xml
+++ b/app/src/main/res/layout/activity_departure.xml
@@ -179,7 +179,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginEnd="10dp"
-                android:src="@drawable/ic_wifi"
+                android:src="@drawable/ic_no_wifi"
                 android:tint="?android:textColor"
                 tools:ignore="UseAppTint" />
 
