SearchActivity, stations are not loaded twice if data already exits.

--- a/app/src/main/res/layout/fragment_stations_sub.xml
+++ b/app/src/main/res/layout/fragment_stations_sub.xml
@@ -93,10 +93,11 @@
     <ProgressBar
         android:id="@+id/stations_sub_progress"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:indeterminateTint="?android:textColor"
         android:layout_centerInParent="true" />
+
 
     <LinearLayout
         android:id="@+id/ll_error_container"
