About activity top bar added.

--- a/app/src/main/res/layout/activity_detur.xml
+++ b/app/src/main/res/layout/activity_detur.xml
@@ -34,8 +34,7 @@
             android:paddingEnd="15dp"
             android:paddingBottom="5dp"
             android:text="@string/detours"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textSize="24sp" />
 
     </RelativeLayout>
 
