--- a/app/src/main/res/layout/template_route.xml
+++ b/app/src/main/res/layout/template_route.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/route_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -46,7 +47,8 @@
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:src="@drawable/ic_departure_board"
-            android:tint="?android:textColor" />
+            android:tint="?android:textColor"
+            tools:ignore="UseAppTint" />
 
         <ImageView
             android:id="@+id/route_map_btn"
@@ -63,7 +65,8 @@
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:src="@drawable/ic_map"
-            android:tint="?android:textColor" />
+            android:tint="?android:textColor"
+            tools:ignore="UseAppTint" />
 
     </LinearLayout>
 
