RouteActivity no internet crash bug fixed

--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -10,7 +10,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activities.lpp.RouteActivity" />
+        tools:context=".ui.activities.RouteActivity" />
 
     <View
         android:id="@+id/map_filter"
