--- a/app/src/main/res/layout/activity_departure.xml
+++ b/app/src/main/res/layout/activity_departure.xml
@@ -5,7 +5,7 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.lpp.DepartureActivity">
+    tools:context=".ui.activities.DepartureActivity">
 
     <FrameLayout
         android:id="@+id/header"
