--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:padding="8dp"
-                android:background="@color/transparent"
+                android:background="?selectableItemBackgroundBorderless"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_menu"
                 android:tint="?android:textColor"
