--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -17,6 +17,7 @@
             android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
+            android:background="?selectableItemBackgroundBorderless"
             android:padding="7dp"
             android:src="@drawable/ic_back_arrow"
             android:tint="?android:textColor"
@@ -54,8 +55,8 @@
         android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
-        android:layout_below="@+id/detour_activity_top" />
+        android:layout_below="@+id/detour_activity_top"
+        android:visibility="invisible" />
 
     <LinearLayout
         android:id="@+id/ll_error_container"
