Routes list splash effect, stations added to TravanaApp in search activity, okhttp timeout added

--- a/app/src/main/res/layout/template_route.xml
+++ b/app/src/main/res/layout/template_route.xml
@@ -40,7 +40,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:layout_weight="0"
-            android:background="@drawable/stretched_circle_container"
+            android:background="?selectableItemBackgroundBorderless"
             android:minWidth="0dp"
             android:minHeight="0dp"
             android:padding="8dp"
@@ -58,7 +58,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:layout_weight="0"
-            android:background="@drawable/stretched_circle_container"
+            android:background="?selectableItemBackgroundBorderless"
             android:minWidth="0dp"
             android:minHeight="0dp"
             android:padding="8dp"
