Removed map from station activity and squashed some bugs

--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -38,5 +38,7 @@
         <item name="android:colorEdgeEffect">@color/divider_dark</item>
         <item name="departureHourColor">#12FFFFFF</item>
         <item name="android:navigationBarColor">@color/color_main_background_dark</item>
+        <item name="android:windowLightNavigationBar">false</item>
     </style>
+
 </resources>
